# fpga-8bit-console

./: .gitignore  Makefile  README.md  attrram.hex  chip.v  clkdivider.v  font_cp437_8x8.hex  lcd.v  palette.v  ram.hex  ram.v  serialize.v  setup.hex  setup_type.hex  sevensegment.v  sprite.v  spriteram.hex  top.pcf  top.v  utils.js
lcd/: lcd.v  palette.v  scalescreen.v  serialize.v  setup.hex  setup128.hex  setup_st7735.hex  setup_st7789_444.hex  setup_type128.hex
raster/: palette.v
raster/sprites/: sprite.v
raster/textbuffer/: textbuffer.v
rtl/: addressdecoder.sv  chip.sv  clocks.sv  control.sv  cpu6502.sv  cpu6502.v  hvsync_generator.sv  lcd.sv  por.sv  ram.hex  ram_async.sv  serialize.sv  slower_clk.sv  sprite.sv  spriteram.hex  top.pcf  top.sv  top_simulator.sv  uart_tx.v
rtl/raster/: palette.sv
rtl/raster/textbuffer/: textbuffer.sv  videoram.hex
rust/: Cargo.toml  build.rs
rust/src/: main.rs
sprites/: sprite.v
textbuffer/: font_cp437_8x8.v  font_pico8.hex  font_pico8.v  textbuffer.v
